--- a/greendar/build.gradle
+++ b/greendar/build.gradle
@@ -19,21 +19,23 @@ repositories {
 }
 
 dependencies {
+    // Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    runtimeOnly 'mysql:mysql-connector-java'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
-    //mysql-driver
-    runtimeOnly 'com.mysql:mysql-connector-j'
-    //logger
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'com.google.cloud:google-cloud-storage:2.17.1'
+    implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage:1.2.8'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    //DB
+    runtimeOnly 'com.mysql:mysql-connector-j'
 
+    // Common
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
