--- a/greendar/build.gradle
+++ b/greendar/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'com.google.cloud:google-cloud-storage:2.17.1'
-    implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage:1.2.8'
+    implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage:1.2.8.RELEASE'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
