--- a/greendar/build.gradle
+++ b/greendar/build.gradle
@@ -23,12 +23,23 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'com.google.cloud:google-cloud-storage:2.17.1'
-    implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage:1.2.8'
+    implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage:1.2.8.RELEASE'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //병욱 추가
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // auth
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    testImplementation 'org.springframework.security:spring-security-test'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
 
     //DB
     runtimeOnly 'com.mysql:mysql-connector-j'
