--- a/greendar/build.gradle
+++ b/greendar/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     // Common
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
 }
 
 tasks.named('test') {
