--- a/greendar/build.gradle
+++ b/greendar/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 
     // auth
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-    implementation 'io.jsonwebtoken:jjwt:0.9.1' // for local jwt -> wook
+    implementation 'io.jsonwebtoken:jjwt:0.9.1' //
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     testImplementation 'org.springframework.security:spring-security-test'
