--- a/greendar/build.gradle
+++ b/greendar/build.gradle
@@ -33,13 +33,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // auth
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-    implementation 'io.jsonwebtoken:jjwt:0.9.1' //
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    testImplementation 'org.springframework.security:spring-security-test'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+//    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+//    implementation 'io.jsonwebtoken:jjwt:0.9.1' //
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+//    testImplementation 'org.springframework.security:spring-security-test'
+//    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+//    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
 
     //DB
