chore: add build scripts

--- a/greendar/build.gradle
+++ b/greendar/build.gradle
@@ -19,6 +19,7 @@ repositories {
 }
 
 dependencies {
+
     // Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -29,17 +30,30 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    //병욱 추가
+
+    //validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    // auth
-//    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-//    implementation 'io.jsonwebtoken:jjwt:0.9.1' //
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
-//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-//    testImplementation 'org.springframework.security:spring-security-test'
-//    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
-//    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
+    //OAuth2
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+
+    //jsonwebToken
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
+
+    //spring security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+
+
+    //etc
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
 
 
     //DB
