--- a/greendar/build.gradle
+++ b/greendar/build.gradle
@@ -12,6 +12,11 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+    all {
+        exclude group: 'ch.qos.logback', module: 'logback-classic'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
+    }
+
 }
 
 repositories {
@@ -21,7 +26,7 @@ repositories {
 dependencies {
 
     // Spring Boot
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation('org.springframework.boot:spring-boot-starter-web')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
@@ -52,7 +57,6 @@ dependencies {
 
     //etc
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
 
 
@@ -70,6 +74,6 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-bootJar{
+bootJar {
     archiveFileName = "Greendar.jar"
 }
