--- a/greendar/build.gradle
+++ b/greendar/build.gradle
@@ -33,18 +33,10 @@ dependencies {
     //병욱 추가
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    // auth
-//    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-//    implementation 'io.jsonwebtoken:jjwt:0.9.1' //
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
-//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-//    testImplementation 'org.springframework.security:spring-security-test'
-//    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
-//    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
-
-
     //DB
     runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'com.h2database:h2'
+
 
     // Common
     compileOnly 'org.projectlombok:lombok'
